force-app/main/default/objects/Contact/fields/Active_Badges__c.field-meta.xml
<CustomField>
    <fullName>Active_Badges__c</fullName>
    <label>Active Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>