force-app/main/default/objects/Contact/fields/Active_Upload__c.field-meta.xml
<CustomField>
    <fullName>Active_Upload__c</fullName>
    <label>Active Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>