force-app/main/default/objects/Contact/fields/Alumni_Careers_Bolt_Demo__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Careers_Bolt_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni Careers Bolt - Demo</label>
    <type>Checkbox</type>
</CustomField>