force-app/main/default/objects/Contact/fields/Alumni_Careers_Bolt_Install_Request__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Careers_Bolt_Install_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni Careers Bolt - Install</label>
    <type>Checkbox</type>
</CustomField>