force-app/main/default/objects/Contact/fields/Alumni_Careers_Bolt_Install_Request_Co__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Careers_Bolt_Install_Request_Co__c</fullName>
    <description>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</description>
    <inlineHelpText>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</inlineHelpText>
    <label>Alumni Careers Bolt - Install Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>