force-app/main/default/objects/Contact/fields/appirio_core__Last_Access_Date__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Last_Access_Date__c</fullName>
    <description>Contains a timestamp for the most recent &quot;login&quot; of this feature user, to be used for PIN expiration.</description>
    <label>Last Access Date</label>
    <type>DateTime</type>
</CustomField>