force-app/main/default/objects/Contact/fields/Badges_Upload__c.field-meta.xml
<CustomField>
    <fullName>Badges_Upload__c</fullName>
    <label>Badges Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>