force-app/main/default/objects/Contact/fields/Community_Migration_Accelerator_Demo__c.field-meta.xml
<CustomField>
    <fullName>Community_Migration_Accelerator_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Migration Accelerator - Demo</label>
    <type>Checkbox</type>
</CustomField>