force-app/main/default/objects/Contact/fields/Competency_Group__c.field-meta.xml
<CustomField>
    <fullName>Competency_Group__c</fullName>
    <label>Competency Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Operations</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Executive Management</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Operations &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Experience Design Studio</fullName>
            </value>
            <value>
                <fullName>Business Consulting</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Accelerators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>