force-app/main/default/objects/Contact/fields/Contact_Us_Install__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Us - Install</label>
    <type>Checkbox</type>
</CustomField>