force-app/main/default/objects/Contact/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created from a Lead Conversion</description>
    <label>Converted?</label>
    <type>Checkbox</type>
</CustomField>