force-app/main/default/objects/Contact/fields/Coverage_Participant__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Participant</label>
    <type>Checkbox</type>
</CustomField>