force-app/main/default/objects/Contact/fields/Digital_StFr_B2B_Comm_Bolt_Demo__c.field-meta.xml
<CustomField>
    <fullName>Digital_StFr_B2B_Comm_Bolt_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital StFr B2B Comm Bolt - Demo</label>
    <type>Checkbox</type>
</CustomField>