force-app/main/default/objects/Contact/fields/Digital_StFr_B2B_Comm_Bolt_Demo_Ct__c.field-meta.xml
<CustomField>
    <fullName>Digital_StFr_B2B_Comm_Bolt_Demo_Ct__c</fullName>
    <label>Digital StFr B2B Comm Bolt - Demo Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>