force-app/main/default/objects/Contact/fields/Digital_Storefront_Bolt_Install_Request__c.field-meta.xml
<CustomField>
    <fullName>Digital_Storefront_Bolt_Install_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Storefront Bolt- Install</label>
    <type>Checkbox</type>
</CustomField>