force-app/main/default/objects/Contact/fields/Email_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Date__c</fullName>
    <description>The last date the Contact&apos;s email address was validated through zero bounce</description>
    <label>Email Validation Date</label>
    <type>Date</type>
</CustomField>