force-app/main/default/objects/Contact/fields/Generic_Resource__c.field-meta.xml
<CustomField>
    <fullName>Generic_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Resource</label>
    <type>Checkbox</type>
</CustomField>