force-app/main/default/objects/Contact/fields/GiftLevelCTR__c.field-meta.xml
<CustomField>
    <fullName>GiftLevelCTR__c</fullName>
    <label>Gift Level CTR</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>