force-app/main/default/objects/Contact/fields/Guide_Me_Demo__c.field-meta.xml
<CustomField>
    <fullName>Guide_Me_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guide Me - Demo</label>
    <type>Checkbox</type>
</CustomField>