force-app/main/default/objects/Contact/fields/Guide_Me_Install__c.field-meta.xml
<CustomField>
    <fullName>Guide_Me_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guide Me - Install</label>
    <type>Checkbox</type>
</CustomField>