force-app/main/default/objects/Contact/fields/Ideas_Install_Request__c.field-meta.xml
<CustomField>
    <fullName>Ideas_Install_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ideas - Install</label>
    <type>Checkbox</type>
</CustomField>