force-app/main/default/objects/Contact/fields/Include_in_Utilization_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Utilization_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the utilization calculation should be included in utilization reports.</description>
    <inlineHelpText>Check this box if the utilization calculation should be included in utilization reports.</inlineHelpText>
    <label>Include in Utilization Reporting</label>
    <type>Checkbox</type>
</CustomField>