force-app/main/default/objects/Contact/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Type</valueSetName>
    </valueSet>
</CustomField>