force-app/main/default/objects/Contact/fields/Insperity_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Insperity_Resource_Name__c</fullName>
    <label>Insperity Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>