force-app/main/default/objects/Contact/fields/Jive_Status__c.field-meta.xml
<CustomField>
    <fullName>Jive_Status__c</fullName>
    <label>Jive Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jive Target</fullName>
            </value>
            <value>
                <fullName>Jive Customer</fullName>
            </value>
            <value>
                <fullName>Jive Recent Win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>