force-app/main/default/objects/Contact/fields/jsImpacts__Imported_from_Jigsaw__c.field-meta.xml
<CustomField>
    <fullName>jsImpacts__Imported_from_Jigsaw__c</fullName>
    <description>Backend calculation field used for reporting</description>
    <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added from Data.com</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>