force-app/main/default/objects/Contact/fields/Lead_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Response_Time__c</fullName>
    <formula>DATEVALUE(CreatedDate)-Lead_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>