force-app/main/default/objects/Contact/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign associated with the Lead Source.</description>
    <inlineHelpText>Campaign associated with the Lead Source.</inlineHelpText>
    <label>Lead Source Detail</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>