force-app/main/default/objects/Contact/fields/MQL_Counter__c.field-meta.xml
<CustomField>
    <fullName>MQL_Counter__c</fullName>
    <description>Sum of Marketing inquiries, occuring at least 90 days apart</description>
    <label>MQL Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>