force-app/main/default/objects/Contact/fields/MQL_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>MQL_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Contact performs a marketing qualified inquiry, this field should be checked, in order to track amount of inquiries</description>
    <inlineHelpText>Check this box when a Contact performs a marketing qualified inquiry</inlineHelpText>
    <label>MQL Inquiry</label>
    <type>Checkbox</type>
</CustomField>