force-app/main/default/objects/Contact/fields/New_User_Request__c.field-meta.xml
<CustomField>
    <fullName>New_User_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Operations Request which the Contact record was created from.</description>
    <label>New User Request</label>
    <referenceTo>Operations_Requests__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>