force-app/main/default/objects/Contact/fields/Page_Info_Demo_Count__c.field-meta.xml
<CustomField>
    <fullName>Page_Info_Demo_Count__c</fullName>
    <description>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</description>
    <inlineHelpText>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</inlineHelpText>
    <label>Page Info - Demo Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>