force-app/main/default/objects/Contact/fields/Partner_Certified__c.field-meta.xml
<CustomField>
    <fullName>Partner_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked = User has at least 1 partner certification</description>
    <inlineHelpText>Checked = User has at least 1 partner certification</inlineHelpText>
    <label>Partner Certified</label>
    <type>Checkbox</type>
</CustomField>