force-app/main/default/objects/Contact/fields/PartnerFirst_Bolt_Install_Request__c.field-meta.xml
<CustomField>
    <fullName>PartnerFirst_Bolt_Install_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartnerFirst Bolt - Install</label>
    <type>Checkbox</type>
</CustomField>