force-app/main/default/objects/Contact/fields/Points_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Points_Check_In__c</fullName>
    <label>Points Check In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>