force-app/main/default/objects/Contact/fields/Points_Today__c.field-meta.xml
<CustomField>
    <fullName>Points_Today__c</fullName>
    <formula>Total_Points__c - Points_Check_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>