force-app/main/default/objects/Contact/fields/Points_Upload__c.field-meta.xml
<CustomField>
    <fullName>Points_Upload__c</fullName>
    <label>Points Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>