force-app/main/default/objects/Contact/fields/Profile_Wizard_Flow_Install__c.field-meta.xml
<CustomField>
    <fullName>Profile_Wizard_Flow_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Wizard Flow - Install</label>
    <type>Checkbox</type>
</CustomField>