force-app/main/default/objects/Contact/fields/PSA_Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>PSA_Assignment_Name__c</fullName>
    <formula>LEFT(FirstName, 1) &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Assignment Name</label>
    <type>Text</type>
</CustomField>