force-app/main/default/objects/Contact/fields/psa_report__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>psa_report__Resource_Name__c</fullName>
    <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>