force-app/main/default/objects/Contact/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>Biz Arch</fullName>
            </value>
            <value>
                <fullName>Business Analyst (MTX)</fullName>
            </value>
            <value>
                <fullName>Change Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Content Marketer</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CPQ Arch</fullName>
            </value>
            <value>
                <fullName>CS-BA</fullName>
            </value>
            <value>
                <fullName>CS-FED</fullName>
            </value>
            <value>
                <fullName>CS-Platform Dev</fullName>
            </value>
            <value>
                <fullName>CS-PM</fullName>
            </value>
            <value>
                <fullName>CS-SFDC Dev</fullName>
            </value>
            <value>
                <fullName>CS-TL</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>Design Engineer</fullName>
            </value>
            <value>
                <fullName>Director, FED</fullName>
            </value>
            <value>
                <fullName>Dir of HR &amp; Recruiting</fullName>
            </value>
            <value>
                <fullName>Employee Bolt Consultant</fullName>
            </value>
            <value>
                <fullName>Exec</fullName>
            </value>
            <value>
                <fullName>Experience Strategist</fullName>
            </value>
            <value>
                <fullName>FED</fullName>
            </value>
            <value>
                <fullName>FED (CG)</fullName>
            </value>
            <value>
                <fullName>FED (CT)</fullName>
            </value>
            <value>
                <fullName>FED (GS Labs)</fullName>
            </value>
            <value>
                <fullName>FED (MTX)</fullName>
            </value>
            <value>
                <fullName>FED (Offshore)</fullName>
            </value>
            <value>
                <fullName>Front Desk Receptionist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>