force-app/main/default/objects/Contact/fields/pse__Work_Calendar__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Calendar</label>
    <referenceTo>pse__Work_Calendar__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>