force-app/main/default/objects/Contact/fields/PTO_Requested_Future_Hours__c.field-meta.xml
<CustomField>
    <fullName>PTO_Requested_Future_Hours__c</fullName>
    <description>PTO that has been requested and approved but not yet used. In other words, the days of PTO are in the future.</description>
    <inlineHelpText>PTO that has been requested and approved but not yet used. In other words, the days of PTO are in the future.</inlineHelpText>
    <label>PTO Requested (Future Hours)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>