force-app/main/default/objects/Contact/fields/PTO_Used__c.field-meta.xml
<CustomField>
    <fullName>PTO_Used__c</fullName>
    <description>Hours of PTO used so far this year.</description>
    <inlineHelpText>Hours of PTO used so far this year.</inlineHelpText>
    <label>PTO Used</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>