force-app/main/default/objects/Contact/fields/Questionnaire_Flow_Demo__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Flow_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Flow - Demo</label>
    <type>Checkbox</type>
</CustomField>