force-app/main/default/objects/Contact/fields/Retired_Badges__c.field-meta.xml
<CustomField>
    <fullName>Retired_Badges__c</fullName>
    <label>Retired Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>