force-app/main/default/objects/Contact/fields/Retired_Upload__c.field-meta.xml
<CustomField>
    <fullName>Retired_Upload__c</fullName>
    <label>Retired Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>