force-app/main/default/objects/Contact/fields/SF_Dev_User_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Dev_User_Id__c</fullName>
    <label>SF Dev User Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>