force-app/main/default/objects/Contact/fields/Slideshare_Flow_Demo__c.field-meta.xml
<CustomField>
    <fullName>Slideshare_Flow_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slideshare Flow - Demo</label>
    <type>Checkbox</type>
</CustomField>