force-app/main/default/objects/Contact/fields/Social_Engagement_Flow_Demo__c.field-meta.xml
<CustomField>
    <fullName>Social_Engagement_Flow_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Engagement Flow - Demo</label>
    <type>Checkbox</type>
</CustomField>