force-app/main/default/objects/Contact/fields/Social_Share_Install__c.field-meta.xml
<CustomField>
    <fullName>Social_Share_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Share - Install</label>
    <type>Checkbox</type>
</CustomField>