force-app/main/default/objects/Contact/fields/ss_int_NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>ss_int_NetSuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>Netsuite Contact Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>